<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marcos.tp.Leitor">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dados" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:phoneNumber="true" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:hint="@string/endereço"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/wpp"
        android:maxHeight="@android:dimen/app_icon_size"
        android:maxWidth="@android:dimen/app_icon_size"
        android:onClick="Wpp"
        android:src="@drawable/wpp"
        android:layout_alignTop="@+id/editText4"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/eemail"
        android:maxHeight="@android:dimen/app_icon_size"
        android:maxWidth="@android:dimen/app_icon_size"
        android:onClick="Google_maps"
        android:src="@drawable/google"
        android:layout_alignTop="@+id/editText2"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/end"
        android:maxHeight="@android:dimen/app_icon_size"
        android:maxWidth="@android:dimen/app_icon_size"
        android:onClick="AddContact"
        android:src="@drawable/contact"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/seta"
        android:id="@+id/button2"
        android:onClick="Next"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/imageButton3" />

</RelativeLayout>
